# fswatcher

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: release-please.yml  release.yml  rust.yml
src/: main.rs
