[package]
name = "fswatcher"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = "4.5.29"
ctrlc = "3.4.5"
env_logger = "0.11.6"
fs2 = "0.4.3"
futures = "0.3.31"
log = "0.4.25"
notify = "8.0.0"
shell-escape = "0.1.5"
tokio = { version = "1.43.0", features = [
  "process",
  "signal",
  "sync",
  "rt-multi-thread",
  "macros",
] }
