[package]
name = "fswatcher"
version = "0.4.2"
edition = "2024"
description = "A file system watcher that executes a command when a specified file changes."
authors = ["Marcelo Borges <me@marceloborges.dev>"]
license = "MIT"
repository = "https://github.com/jmarcelomb/fswatcher"
keywords = ["file", "watcher", "cli", "async"]
categories = ["command-line-utilities", "filesystem"]

include = ["Cargo.toml", "LICENSE", "README.md", "src/main.rs"]

[dependencies]
clap = "4.5.34"
ctrlc = "3.4.5"
env_logger = "0.11.8"
fs2 = "0.4.3"
futures = "0.3.31"
log = "0.4.27"
notify = "8.0.0"
shell-escape = "0.1.5"
tokio = { version = "1.44.1", features = [
  "fs",
  "process",
  "time",
  "signal",
  "sync",
  "rt-multi-thread",
  "macros",
] }

[profile.release]
lto = true
strip = true
opt-level = 3
